Fix jumping of rows in body

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-body {
+body, main {
   font: 12.0px Courier;
   color: #000000;
 }
